# DataAnalyseAndManageSystem

./: CMakeLists.txt
EasyX/include/: easyx.h
src/: UserInputHandler.cpp  main.cpp
src/Entities/: FileEntity.cpp  SavedDataEntity.cpp
src/GuiComponents/: GuiButton.cpp  GuiControllers.cpp  GuiHistogram.cpp  GuiInputBox.cpp  GuiLabel.cpp  GuiLineChart.cpp  GuiScreen.cpp
src/PolyFitUtils/: polyfit.cpp  polyop.cpp
src/Processors/: DataAnalyseSystem.cpp  DataManageSystem.cpp  LifecycleProcessor.cpp  UserAuthentication.cpp
src/Screens/: DataAnalyseScreen.cpp  DataManageScreen.cpp  DataResScreen.cpp  LoginScreen.cpp  MainScreen.cpp  RegisterScreen.cpp  WelcomeScreen.cpp
